# esp32-c6-tsm1000-temperature-parser

./: Cargo.toml
src/: index.html  main.rs  sensor_storage.rs
