[package]
name = "water-sensor-esp32-c6"
version = "0.1.0"
authors = ["aaronmunsters <aaronmunstersbxl@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "water-sensor-esp32-c6"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

embedded-hal = "1.0.0"
embedded-svc = "0.28.1"

temperature_parser = { path = "../temperature_parser/crates/temperature_parser" }
sensor_storage = { path = "../temperature_parser/crates/sensor_storage" }

dotenvy_macro = "0.15.7"

[build-dependencies]
embuild = "0.33"
